--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 /* reset */
 * {
     margin: 0;
@@ -20,13 +22,30 @@ a:visited {
     z-index: 1;
 }
 
-/* appearence */
+/* typography */
 main {
-    color: #fff;
+    color: #f8f5f5;
+    font-family: "Inter", sans-serif;
+    font-weight: lighter;
+    font-size: 1rem;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "Times New Roman", Times, serif;
 }
 
 h1 {
-    font-size: 15vmin;
+    font-size: 9vw;
+}
+
+h2 {
+    font-size: 7.5vw;
+}
+
+h3 {
+    font-size: 6vw;
 }
 
 /* page layout */
@@ -95,4 +114,22 @@ nav {
 
 .links li {
     padding-left: 1.5rem;
+}
+
+/* header */
+#main div p {
+    margin-top: 1.35rem;
+    letter-spacing: .4rem;
+}
+
+/* footer */
+footer {
+    position: relative;
+    text-align: center;
+    margin-bottom: 2rem;
+    z-index: 10;
+}
+
+footer small {
+    letter-spacing: .25rem;
 }
