--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ a:visited {
 }
 
 /* typography */
-main {
+body {
     color: #f8f5f5;
     font-family: "Inter", sans-serif;
     font-weight: lighter;
