--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ a:visited {
 
 /* typography */
 body {
-    color: #E4E0D9;
+    color: #e4e0d9;
     font-family: "Inter", sans-serif;
     font-weight: lighter;
     font-size: 1rem;
